--- a/rosey/translations/nl/tag/rest.yaml
+++ b/rosey/translations/nl/tag/rest.yaml
@@ -11,10 +11,19 @@ _inputs:
           comment: "[tag/rest](https://adjective-noun.cloudvent.net/tag/rest)  //  [Git
             history](https://github.com/org/repo/commits/staging/./rosey/transl\
             ations/nl/tag/rest.yaml)"
-          inputs: []
+          inputs:
+            - Rest
         - heading: Already translated (nl)
           comment: "[tag/rest](https://adjective-noun.cloudvent.net/tag/rest)  //  [Git
             history](https://github.com/org/repo/commits/staging/./rosey/transl\
             ations/nl/tag/rest.yaml)"
           inputs: []
+  Rest:
+    label: Rest
+    hidden: false
+    type: text
+    options: {}
+    comment: "[See in
+      context](https://adjective-noun.cloudvent.net/tag/rest#:~:text=Rest)"
 urlTranslation: tag/rest.html
+Rest: ""
