--- a/rosey/translations/nl/project/antelope-anyon.yaml
+++ b/rosey/translations/nl/project/antelope-anyon.yaml
@@ -13,11 +13,21 @@ _inputs:
             /antelope-anyon)  //  [Git
             history](https://github.com/org/repo/commits/staging/./rosey/transl\
             ations/nl/project/antelope-anyon.yaml)"
-          inputs: []
+          inputs:
+            - Antelope Canyon
         - heading: Already translated (nl)
           comment: "[project/antelope-anyon](https://adjective-noun.cloudvent.net/project\
             /antelope-anyon)  //  [Git
             history](https://github.com/org/repo/commits/staging/./rosey/transl\
             ations/nl/project/antelope-anyon.yaml)"
           inputs: []
+  Antelope Canyon:
+    label: Antelope Canyon
+    hidden: false
+    type: text
+    options: {}
+    comment: "[See in
+      context](https://adjective-noun.cloudvent.net/project/antelope-anyon#:~:t\
+      ext=Antelope%20Canyon)"
 urlTranslation: project/antelope-anyon.html
+Antelope Canyon: ""
